# Context-Genome

./: .env.example  .gitignore  CONTRIBUTING.md  Context_Genome_rules_v0.1.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
context_genome/: __init__.py  server.py
context_genome/agents/: __init__.py  action_parser.py  drivers.py  prompt_builder.py
context_genome/engine/: __init__.py  exporter.py  models.py  presets.py  rule_agent.py  world.py
context_genome/web/: app.js  index.html  styles.css
docs/: architecture.md  demo-gallery.md
docs/examples/: context-genome-sandbox-seed7-summary.json  demo-gallery.json
scripts/: build_demo_gallery.py  check_repository_hygiene.py  doctor.py  render_evolution_gif.py
skill_garden/: __init__.py  server.py
skill_garden/agents/: __init__.py
skill_garden/engine/: __init__.py
tests/: test_action_parser.py  test_doctor.py  test_exporter.py  test_llm_runtime.py  test_server_health.py  test_token_budget.py
