[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "context-genome"
version = "0.1.0"
description = "A browser-based LLM context evolution sandbox."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "FINNMATH1992" }]
keywords = ["llm", "agents", "artificial-life", "context", "evolution"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/FINNMATH1992/Context-Genome"
Repository = "https://github.com/FINNMATH1992/Context-Genome"

[project.scripts]
context-genome = "context_genome.server:main"

[tool.setuptools.packages.find]
include = ["context_genome*", "skill_garden*"]

[tool.setuptools.package-data]
"context_genome.web" = ["*.html", "*.css", "*.js", "*.svg"]
